slides: updated introduction

--- a/slides/introduction.tex
+++ b/slides/introduction.tex
@@ -1,32 +1,49 @@
 \section{Introduction}
 
     \begin{frame}{Introduction: main features}
-        \centering
-        \includegraphics[height=2cm,keepaspectratio]{images/rust-logo.png}
-        \vspace{1cm}
-
         \begin{columns}[t, onlytextwidth]
             \column{0.33\textwidth}
             \centering
-            General purpose
+            \includegraphics[height=1.5cm, keepaspectratio]{images/shapes.pdf}
+
+            \textbf{General purpose}
 
             \column{0.33\textwidth}
             \centering
-            Blazingly fast
+            \includegraphics[height=1.5cm, keepaspectratio]{images/fast.pdf}
+            
+            \textbf{Blazingly fast}
 
             \column{0.33\textwidth}
             \centering
-            Memory safe
+            \includegraphics[height=1.5cm, keepaspectratio]{images/memory.pdf}
+            
+            \textbf{Memory safe}
         \end{columns}
 
         \vspace{1cm}
 
-        No Garbage Collector
+        \begin{columns}[t, onlytextwidth]
+            \column{0.5\textwidth}
+            \centering
+            \includegraphics[height=1.5cm, keepaspectratio]{images/no-gc.pdf}
+
+            \textbf{No Garbage Collector}
+
+            \column{0.5\textwidth}
+            \centering
+            \includegraphics[height=1.5cm, keepaspectratio]{images/toolbox.pdf}
+
+            \textbf{Tools} \\ (doc, cargo, libraries)
+        \end{columns}
+
+        
     \end{frame}
 
     \begin{frame}{Introduction: history}
         \begin{itemize}
             \item Started in 2006 at Mozilla, first announced in 2010
+            \item Mozilla used Rust in its experimental browser engine, Servo
             \item First stable release in 2015
         \end{itemize}
     \end{frame}
@@ -39,8 +56,8 @@
             \item CloudFlare: quic / http 3 implementation
             \item Dropbox: file storage
             \item Clever Cloud: reverse proxy
-            \item Atlassian, Canonical, Coursera, Chef, Deliveroo, NPM, Sentry…
-            Growing ecosystem for embedded development
+            \item Atlassian, Canonical, Coursera, Chef, Deliveroo, NPM, Sentry...
+            \item Growing ecosystem for embedded development
         \end{itemize}
     \end{frame}
 
